Fix range-divider alignment

--- a/src/DateTimeRangePicker.less
+++ b/src/DateTimeRangePicker.less
@@ -15,6 +15,7 @@
 
   &__wrapper {
     display: flex;
+    align-items: center;
     border: thin solid gray;
   }
 
@@ -23,6 +24,7 @@
     @colon-width: .217em;
     // own padding + inputs padding + digits width + dots width
     min-width: calc(~"4px + (4px * 3) + " @digit-width * 6 ~" + " @colon-width * 2);
+    width: 100%;
     flex-grow: 1;
     display: flex;
     padding: 0 2px;
